--- a/jqueryPlugin/demo/layout/fullPage/default.html
+++ b/jqueryPlugin/demo/layout/fullPage/default.html
@@ -20,7 +20,7 @@
 			<h1 class="desc_title">fullPage</h1>
 			<p>
 				fullPage 이용하여 원페이지 사이트 . <br />
-				link : <a href="https://github.com/alvarotrigo/fullPage.js#fullpagejs" target="_blank">fullPage jQuery Plugin(GitHub)</a>
+				doc link : <a href="https://github.com/alvarotrigo/fullPage.js#fullpagejs" target="_blank">fullPage jQuery Plugin(GitHub)</a>
 			</p>												
 		</div>
 		<!-- e: 스크립드 설명 -->
@@ -32,6 +32,9 @@
 				<dl>
 					<dt>설명</dt>
 					<dd><span class="icon"></span>기본 위치값은 CSS 에서 설정해야합니다.</dd>
+					<dd><span class="icon"></span>사용 리소스 : 
+						[jquery.fullPage.css, jquery-1.12.1.min.js, jquery.fullPage.js]
+					</dd>
 					<dd><span class="icon"></span>버튼 옵션 정의</dd>					
 				</dl>
 				<table class="table_col" summary="masonry 옵션 설명">
@@ -115,12 +118,12 @@
 						<td>색션의 슬라이드 좌우로 이동						</td>		
 					</tr>
 					<tr>
-						<td>.setAutoScrolling(boolean)</td>			
-						<td>스크롤바생성 여부 
+						<td>.setAutoScrolling(true:boolean)</td>			
+						<td>스크롤 한번에 페이지 넘김 여부 
 						</td>		
 					</tr>
 					<tr>
-						<td>.setFitToSection(boolean)</td>
+						<td>.setFitToSection(true:boolean)</td>
 						<td>섹션 슬라이드 스넵걸기 세팅.</td>
 					</tr>
 					<tr>
@@ -130,10 +133,14 @@
 					<tr>
 						<td>.setAllowScrolling(boolean, [directions])</td>
 						<td>directions : all, up, down, left, right <br>
-						    현제 스크롤 이벤트 제한 하기. 
+							현제 스크롤 이벤트 제한 하기. 
 						</td>
 					</tr>
-						  
+					<tr>
+						<td>.setLockAnchors(true:boolean)</td>
+						<td>앵커가 URL에 영향을 미칠지 여부를 결정하는 lockAnchors 옵션의 값을 설정합니다.</td>
+					</tr>
+					
 					</tbody>
 				</table>
 				 
