--- a/jqueryPlugin/demo/layout/fullPage/ex01.html
+++ b/jqueryPlugin/demo/layout/fullPage/ex01.html
@@ -3,22 +3,22 @@
 
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-	<title>fullPage.js</title>
-	<link rel="stylesheet" type="text/css" href="../../../../asset/js/libs/fullPage/css/jquery.fullPage.css" />
+	<title>ex01 : fullpagejs</title>
+	<link rel="stylesheet" type="text/css" href="../../../../asset/js/libs/fullPage/css/jquery.fullpage-2.9.7.css" />
 	<!--[if IE]>
 		<script type="text/javascript">
 			 var console = { log: function() {} };
 		</script>
 	<![endif]-->
 	<script type="text/javascript" src="../../../../asset/js/libs/jquery-1.12.1.min.js"></script>
-	<script type="text/javascript" src="../../../../asset/js/libs/fullPage/jquery.fullPage.js"></script>
-	
+	<script type="text/javascript" src="../../../../asset/js/libs/fullPage/jquery.fullpage-2.9.7.js"></script>
 
 	<style>
-        .section { text-align: center; }
+		.section { text-align: center; }
 		#actions{position:fixed;top: 73px;left: 30px;z-index: 99999;}
 		#actions a{background: rgba(0,0,0,0.8);padding: 7px;margin: 2px;color: #ccc;display: inline-block;}
 		#actions a:hover{color: #fff;background: #81A140;}
+		#actions a.active{color: #fff;background: #aa3140;}
         
         #menu li {display:inline-block;margin: 10px;color: #000;
         background:#fff;
@@ -27,8 +27,8 @@
                 border-radius: 10px;
         }
         #menu li.active{background:#666;
-            background: rgba(0,0,0, 0.5);
-            color: #fff;
+					background: rgba(0,0,0, 0.5);
+					color: #fff;
         }
         #menu li a{text-decoration:none;color: #000;}
         #menu li.active a:hover{color: #000;}
@@ -68,18 +68,20 @@
 	<a id="silentMoveToSlide" href="#">silentMoveTo(2,3)</a>
 	<a id="moveSlideRight" href="#">moveSlideRight</a>
 	<a id="moveSlideLeft" href="#">moveSlideLeft</a>								<br />
-	<a id="setAutoScrollingTrue" href="#">setAutoScrolling(true)</a>
+	<a id="setAutoScrollingTrue" class="active" href="#">setAutoScrolling(true)</a>
 	<a id="setAutoScrollingFalse" href="#">setAutoScrolling(false)</a>				<br />
-	<a id="setAllowScrollingTrue" href="#">setAllowScrolling(true)</a>
+	<a id="setFitToSectionTrue" class="active" href="#">setFitToSection(true)</a>
+	<a id="setFitToSectionFalse" href="#">setFitToSection(false)</a>				<br />
+	<a id="setAllowScrollingTrue" class="active" href="#">setAllowScrolling(true)</a>
 	<a id="setAllowScrollingFalse" href="#">setAllowScrolling(false)</a>			<br />
-	<a id="setKeyboardScrollingTrue" href="#">setKeyboardScrolling(true)</a>
+	<a id="setKeyboardScrollingTrue"  class="active" href="#">setKeyboardScrolling(true)</a>
 	<a id="setKeyboardScrollingFalse" href="#">setKeyboardScrolling(false)</a>		<br />
 	<a id="setScrollingSpeed1500" href="#">setScrollingSpeed(1500)</a>
 	<a id="setScrollingSpeed700" href="#">setScrollingSpeed(700)</a>				<br />
 	<a id="destroy" href="#">destroy('all')</a>
 	<a id="undestroy" href="#">undestroy</a>
 	<a id="reBuild" href="#">reBuild</a>											<br />
-	<a id="setLockAnchorsTrue" href="#">setLockAnchors(true)</a>
+	<a id="setLockAnchorsTrue" class="active" href="#">setLockAnchors(true)</a>
 	<a id="setLockAnchorsFalse" href="#">setLockAnchors(false)</a>
 </div>
 
@@ -189,35 +191,62 @@
 				$.fn.fullpage.moveSlideLeft();
 			});
 
-			$('#setAutoScrollingFalse').click(function(e){
-				e.preventDefault();
-				$.fn.fullpage.setAutoScrolling(false);
-			});
-
 			$('#setAutoScrollingTrue').click(function(e){
 				e.preventDefault();
 				$.fn.fullpage.setAutoScrolling(true);
+				$('#setAutoScrollingTrue').addClass("active");
+				$('#setAutoScrollingFalse').removeClass("active");
 			});
-
-			$('#setAllowScrollingFalse').click(function(e){
+			$('#setAutoScrollingFalse').click(function(e){
 				e.preventDefault();
-				$.fn.fullpage.setAllowScrolling(false);
+				$.fn.fullpage.setAutoScrolling(false);
+				$('#setAutoScrollingTrue').removeClass("active");
+				$('#setAutoScrollingFalse').addClass("active");
 			});
 
+			$('#setFitToSectionTrue').click(function(e){
+				e.preventDefault();
+				$.fn.fullpage.setFitToSection(true);
+				$('#setFitToSectionTrue').addClass("active");
+				$('#setFitToSectionFalse').removeClass("active");
+				console.log("setFitToSectionTrue")
+			});
+			$('#setFitToSectionFalse').click(function(e){
+				e.preventDefault();
+				$.fn.fullpage.setFitToSection(false);
+				$('#setFitToSectionTrue').removeClass("active");
+				$('#setFitToSectionFalse').addClass("active");
+				console.log("setFitToSectionFalse")
+			});
+
+		
 			$('#setAllowScrollingTrue').click(function(e){
 				e.preventDefault();
 				$.fn.fullpage.setAllowScrolling(true);
+				$('#setAllowScrollingTrue').addClass("active");
+				$('#setAllowScrollingFalse').removeClass("active");
 			});
-
-			$('#setKeyboardScrollingFalse').click(function(e){
+			$('#setAllowScrollingFalse').click(function(e){
 				e.preventDefault();
-				$.fn.fullpage.setKeyboardScrolling(false);
+				$.fn.fullpage.setAllowScrolling(false);
+				$('#setAllowScrollingTrue').removeClass("active");
+				$('#setAllowScrollingFalse').addClass("active");
 			});
 
+		
 			$('#setKeyboardScrollingTrue').click(function(e){
 				e.preventDefault();
 				$.fn.fullpage.setKeyboardScrolling(true);
+				$('#setKeyboardScrollingTrue').addClass("active");
+				$('#setKeyboardScrollingFalse').removeClass("active");
 			});
+			$('#setKeyboardScrollingFalse').click(function(e){
+				e.preventDefault();
+				$.fn.fullpage.setKeyboardScrolling(false);
+				$('#setKeyboardScrollingTrue').removeClass("active");
+				$('#setKeyboardScrollingFalse').addClass("active");
+			});
+
 
 			$('#setScrollingSpeed1500').click(function(e){
 				e.preventDefault();
@@ -249,14 +278,18 @@
 			$('#setLockAnchorsTrue').click(function(e){
 				e.preventDefault;
 				$.fn.fullpage.setLockAnchors(true);
+				$('#setLockAnchorsTrue').addClass("active");
+				$('#setLockAnchorsFalse').removeClass("active");
 			});
 
 			$('#setLockAnchorsFalse').click(function(e){
 				e.preventDefault;
 				$.fn.fullpage.setLockAnchors(false);
+				$('#setLockAnchorsTrue').removeClass("active");
+				$('#setLockAnchorsFalse').addClass("active");
 			});
-        });
-    </script>
+		});
+</script>
 
 
 </body>
