--- a/asset/css/trpBase.css
+++ b/asset/css/trpBase.css
@@ -291,6 +291,54 @@ label.screen-reader-text { position:absolute; margin:-1px; padding:0; height:1px
 .trp.board-table-type1 tbody td { height: 35px; padding: 4px 5px 3px 5px; border-bottom: 1px solid #e5e5e5; font-size: 13px;}
 .trp.board-table-type1 tbody td.tit { padding-left: 50px; text-align: left; }
 
+.trp.board-table-type1 th.table_sort { cursor: pointer; position: relative; padding-right: 16px !important; }
+.trp.board-table-type1 th.table_sort.sort_up i.sort::before { border-bottom: 5px solid #555; }
+.trp.board-table-type1 th.table_sort.sort_up i.sort::after { border-top: 5px solid #9C9C9C; }
+.trp.board-table-type1 th.table_sort.sort_dw i.sort::before { border-bottom: 5px solid #9C9C9C; }
+.trp.board-table-type1 th.table_sort.sort_dw i.sort::after { border-top: 5px solid #555; }
+.trp.board-table-type1 th.table_sort i.sort { position: relative; text-decoration: none; font-style: normal;
+  position: absolute; top: 50%; right: 0px; margin-top: -8px;
+  width: 16px; height: 16px;
+}
+.trp.board-table-type1 th.table_sort i.sort::before, th.table_sort i.sort::after {
+  content: ""; width: 0; height: 0;
+  position: absolute; top: 50%; right: 5px;
+}
+.trp.board-table-type1 th.table_sort i.sort::before {
+  margin-top: -7px;
+  border-left: 4px solid transparent;
+  border-right: 4px solid transparent;
+  border-bottom: 5px solid #9C9C9C;
+}
+.trp.board-table-type1 th.table_sort i.sort::after {
+  margin-top: 2px;
+  border-top: 5px solid #9C9C9C;
+  border-left: 4px solid transparent;
+  border-right: 4px solid transparent;
+}
+
+
+
+.trp.board-table-type3 { width:100%;  text-align:center; }
+.trp.board-table-type3 thead th { height: 38px; padding: 4px 5px 3px 5px; 
+  border-bottom: 1px solid #d9d9d9; font-size: 13px; background-color: #f6f6f6; }
+.trp.board-table-type3 tbody td { height: 35px; padding: 4px 5px 3px 5px; border-bottom: 1px solid #e5e5e5; font-size: 13px;}
+.trp.board-table-type3 tbody td.tit { padding-left: 50px; text-align: left; }
+
+.scrollY-type { overflow: hidden; overflow-y: auto; }
+.scrollX-type { overflow: hidden; overflow-x: auto; }
+.scroll-type  { overflow: hidden; overflow: auto; }
+.thead_hold thead   { z-index: 3; position: sticky; top: 0; }
+.thead_hold thead th{ z-index: 3; }
+.thead_hold thead::before {  display: block; content: "";
+  position: absolute; top: 0px; left: 0; width: 100%; height: 2px; background-color: #000; z-index: 4;
+}
+
+th.hold_left { z-index: 2; position: sticky; left:0; background-color: #f6f6f6; } 
+td.hold_left { z-index: 2; position: sticky; left:0; background-color: #fff;  }
+
+
+
 
 .trp.board-list-type1 { width:100%; border-top: 2px solid #000; text-align:left; }
 .trp.board-list-type1>li { padding: 14px 15px 13px 15px; border-bottom: 1px solid #d9d9d9;  overflow:hidden;  }
