--- a/responsive/demo/layout/mediaQueries/default.html
+++ b/responsive/demo/layout/mediaQueries/default.html
@@ -30,19 +30,25 @@
 				<dl>
 					<dt>설명</dt>					
 					<dd><span class="icon"></span>미디어 쿼리 사용과 css로드 방법</dd>
+					<dd><span class="icon"></span>@media (all & screen) and (<b>max-width:XXXpx</b>) : 데스크탑 기준 : XXXpx 까지</dd>
+					<dd><span class="icon"></span>@media (all & screen) and (<b>width ＜＝ XXXpx</b>) : 데스크탑 기준 : XXXpx 까지</dd>
+					<dd><span class="icon"></span>@media (all & screen) and (<b>min-width:XXXpx</b>) : 모바일 기준 :  XXXpx 이상부터</dd>
 				</dl>
+				@media screen and (width <= 1280px)
 
-
-<!-- 				<div class="ex_wapper">
-					<h3 class="api-title_h3">VIEW</h3>
-					<p class="ex-more"><a href="javascript:return false;"><span class="d-n">+</span><span style="display: inline;">-</span></a></p>
+				<div class="ex_wapper">
+					<h3 class="api-title_h3">VIEW max(css)</h3>
+					<!-- <p class="ex-more"><a href="javascript:return false;"><span class="d-n">+</span><span style="display: inline;">-</span></a></p> -->
 					<p class="ex-view"><a href="ex01.html" target="_blank">View Sample</a></p>
 					<div class="ex-body d-n" >
-				
-					</div>
-				</div> -->
-				
 
+
+<div class="mediaQuery"></div>
+
+
+					</div>
+				</div>
+				
 				<div class="ex_wapper">
 					<h3 class="api-title_h3 css">CSS</h3>
 					<div class="api-body_h3 css">
@@ -91,11 +97,26 @@
 
 
 
-
 					</div>
 				</div>
 
 
+
+
+
+
+				<div class="ex_wapper">
+					<h3 class="api-title_h3">VIEW max(html)</h3>
+					<!-- <p class="ex-more"><a href="javascript:return false;"><span class="d-n">+</span><span style="display: inline;">-</span></a></p> -->
+					<p class="ex-view"><a href="ex02.html" target="_blank">View Sample</a></p>
+					<div class="ex-body d-n" >
+
+
+<div class="mediaQuery"></div>
+
+
+					</div>
+				</div>
 
 				<div class="ex_wapper">
 				<h3 class="api-title_h3 html">HTML</h3>
@@ -115,6 +136,73 @@
 					</div>
 				</div>
 					
+
+
+
+				<div class="ex_wapper">
+					<h3 class="api-title_h3">VIEW min(css)</h3>
+					<!-- <p class="ex-more"><a href="javascript:return false;"><span class="d-n">+</span><span style="display: inline;">-</span></a></p> -->
+					<p class="ex-view"><a href="ex03.html" target="_blank">View Sample</a></p>
+					<div class="ex-body d-n" >
+
+
+<div class="mediaQuery"></div>
+
+
+					</div>
+				</div>
+				
+				<div class="ex_wapper">
+					<h3 class="api-title_h3 css">CSS</h3>
+					<div class="api-body_h3 css">
+
+
+
+<!-- HTML generated using hilite.me --><div style="background: #272822; overflow:auto;width:auto;border:solid gray;border-width:.1em .1em .1em .8em;padding:.2em .6em;"><table><tr><td><pre style="margin: 0; line-height: 125%"> 1
+	2
+	3
+	4
+	5
+	6
+	7
+	8
+	9
+ 10
+ 11
+ 12
+ 13
+ 14
+ 15
+ 16
+ 17</pre></td><td><pre style="margin: 0; line-height: 125%"><span style="color: #f92672">&lt;style&gt;</span>
+ <span style="color: #66d9ef">@media</span> <span style="color: #f92672">screen</span> <span style="color: #f92672">and</span> <span style="color: #f92672">(min-width</span><span style="color: #a6e22e">:480px</span><span style="color: #f92672">)</span> <span style="color: #f8f8f2">{</span>
+ 
+ <span style="color: #f8f8f2">}</span>
+ 
+ <span style="color: #66d9ef">@media</span> <span style="color: #f92672">screen</span> <span style="color: #f92672">and</span> <span style="color: #f92672">(min-width</span><span style="color: #a6e22e">:768px</span><span style="color: #f92672">)</span> <span style="color: #f8f8f2">{</span>
+ 
+ <span style="color: #f8f8f2">}</span>
+ 
+ <span style="color: #66d9ef">@media</span> <span style="color: #f92672">screen</span> <span style="color: #f92672">and</span> <span style="color: #f92672">(min-width</span><span style="color: #a6e22e">:1024px</span><span style="color: #f92672">)</span> <span style="color: #f8f8f2">{</span>
+ 
+ <span style="color: #f8f8f2">}</span>
+ 
+ <span style="color: #66d9ef">@media</span> <span style="color: #f92672">screen</span> <span style="color: #f92672">and</span> <span style="color: #f92672">(min-width</span><span style="color: #a6e22e">:1280px</span><span style="color: #f92672">)</span> <span style="color: #f8f8f2">{</span>
+ 
+ <span style="color: #f8f8f2">}</span>
+ <span style="color: #f92672">&lt;/style&gt;</span>
+ </pre></td></tr></table></div>
+ 
+
+
+
+
+
+					</div>
+				</div>
+
+
+
 		
 			</div>
 		</div>
