[2024-1103] 컨테이너 쿼리

--- a/responsive/demo/layout/containerQueries/default.html
+++ b/responsive/demo/layout/containerQueries/default.html
@@ -30,6 +30,7 @@
 				<dl>
 					<dt>설명</dt>					
 					<dd><span class="icon"></span>컨테이너 쿼리 사용 방법</dd>
+					<dd><span class="icon"></span> 클래스(.containerQuery)에 컨테이너이름(div-container)을 부여하여 사용 </dd>
 					<dd><span class="icon"></span>@container div-container (width <= XXXpx)  : 데스크탑 기준 : XXXpx 까지</dd>
 				</dl>
 
