--- a/jqueryPlugin/demo/layout/scrollTrigger/ex03.html
+++ b/jqueryPlugin/demo/layout/scrollTrigger/ex03.html
@@ -5,79 +5,158 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>scrollTrigger</title>
   <script src="../../../../asset/js/libs/gsap/gsap-3.12.5.min.js"></script>
+  <script src="../../../../asset/js/libs/gsap/ScrollToPlugin-3.12.5.min.js"></script>
   <script src="../../../../asset/js/libs/gsap/ScrollTrigger-3.12.5.min.js"></script>
-  <style>
-    html, body { margin: 0; padding: 0;}
-    /* html { height: 100vh; } */
-    body {  background: #000; }
-    .sequence {
-      position: relative;
-      transform: translate(0%, -50%);
-      max-width: 100vw;
-      max-height: 100vh;
-    }
-
-    section { position: relative; height: 100vh; display: flex; justify-content: center; align-items: center;}
-    .bgcolor1 { background-color: antiquewhite;}
-    .bgcolor2 { height: 150vh; 
-      background-size: 50px 50px;
-      background-image:
-        linear-gradient(to right, #dfdfdf 1px, transparent 1px),
-        linear-gradient(to bottom, #dfdfdf 1px, transparent 1px);
-    }
-    .bgcolor3 { background-color: beige;}
-  </style>
 </head>
 <body>
-  <section class="section1 bgcolor1"></section>
-  <section class="section2 bgcolor2">
-    <div class="sequence">
-      <canvas id="hero-lightpass" />
+  <style>
+    @import url('https://fonts.googleapis.com/css?family=Signika+Negative:300,400&display=swap');
+    body { padding: 0; margin: 0; height: 100%;
+      background-color: grey;  
+      font-family: "Signika Negative", sans-serif; 
+    }
+    /* section1 */
+    .spacer-title { display: flex; align-items: center; justify-content:center;
+      height: 20vh; background: white;
+    }
+    .spacer-title span { color: green; font-size: 30px; }
+
+    /* section2 */
+    .content-wrap{ position:relative; width: 333px; height: 222px;
+      margin-right: 111px; margin-top: -10px;
+      border-radius: 4px;
+      background-color: limegreen;
+    }
+    .pin-up { display: flex; flex-direction: row; justify-content: center; align-items: center;
+      height: 100vh; background-color: green;
+    }
+    .content { display: flex; justify-content: center; align-items: center; width: 100%; height: 100%;
+      position:absolute;
+      background-color: limegreen; border-radius: 4px; font-size: 30px; color: white;
+    }
+    .sideline { position: absolute; top: calc(50vh - 111px - 7px); left: calc(50vw + 0px);
+      height: 222px; width: 3px;
+      background-color: orange;
+      transform: scaleY(0); transform-origin: top center;
+      z-index: 1;
+    }
+    .text-wrap { height: 100vh; width: 333px; display: flex;
+      flex-direction: column; justify-content: center; align-items: flex-start;
+      background-color: green;
+    }
+    .text { width: 100px; height: 50px;
+      font-size: 30px; text-transform: uppercase; color: white; 
+      transform-origin: left center; transform: rotate(0.1deg)
+    }
+
+    /* section3 */
+    .below { display: flex; align-items: center; justify-content:center; height: 100vh;
+      background-color: white;
+    }
+    .below span { opacity: 0; visibility: hidden; transform: translateY(-50vh);
+      color: green; font-size: 30px;
+    }
+
+  </style>
+    
+    
+  <div class="spacer-title">
+    <span>Start Scrolling!</span>
+  </div>
+  
+  <div class="wrapper">
+    <div class="pin-up">
+      
+      <div class="content-wrap">
+        <span class="content content-0 initial">Greensock</span>
+        <span class="content content-1">ScrollTrigger</span>
+        <span class="content content-2">Creativity</span>
+        <span class="content content-3">Versatility</span>
+        <span class="content content-4 remaining">Awesomeness</span>
+      </div>  
+      <div class="sideline"></div>
+      
+      <div class="text-wrap">
+        <div class="text">Greensock</div>
+        <div class="text">ScrollTrigger</div>
+        <div class="text">Creativity</div>
+        <div class="text">Versatility</div>
+        <div class="text">Awesomeness</div>  
+      </div>
+      
     </div>
-  </section>
-  <section class="section3 bgcolor3"></section>
+  </div>
+  
+  <div class="below">
+    <span>Yowza!</span>
+  </div>  
+  
 
   <script>
-    console.clear();
+    gsap.set('.content:not(.initial)', { autoAlpha: 0 })
 
-    const canvas = document.getElementById("hero-lightpass");
-    const context = canvas.getContext("2d");
-    canvas.width = 1158;
-    canvas.height = 770;
+    /* ====================== 스크롤 홀드, 스크롤 메뉴 막대 */
+    var headlines = gsap.utils.toArray(".text");
+    var totalDuration = "300%";
+    var singleDuration = totalDuration / headlines.length;
 
-    const frameCount = 147;
-    const currentFrame = index => (
-      `./images/${(index + 1).toString().padStart(4, '0')}.jpg`
-    );
+    const lineTimeline = gsap.timeline();
+    ScrollTrigger.create({    
+      trigger: ".pin-up",
+      start: "top top",
+      end: "+=" + totalDuration,
+      markers: true,
+      pin: true,
+      scrub: true,
+      animation: lineTimeline,
+      onUpdate: function(self){
+        //console.log("방향, Per >>: ", self.direction, self.progress)
+        console.log("end: ", "+=" + totalDuration)
+      }
+    });
+    lineTimeline
+    .to('.sideline', { duration: 1 }, 0)
+    .to('.sideline', { duration: 0.9, scaleY: 1, ease: "none" }, 0)
 
-    const images = []
-    const airpods = { frame: 0 };
 
-    for (let i = 0; i < frameCount; i++) {
-      const img = new Image();
-      img.src = currentFrame(i);
-      images.push(img);
-    }
 
-    gsap.to(airpods, {
-      frame: frameCount - 1,
-      snap: "frame",
-      ease: "none",
-      scrollTrigger: {
-        scrub: 0.5,
-        pin: ".sequence",
-        pinSpacing:false,
-        markers: true, 
-      },
-      onUpdate: render // use animation onUpdate instead of scrollTrigger's onUpdate
+
+    /* ====================== 메뉴 활성화 */
+    headlines.forEach((elem, i) => {    
+      const smallTimeline = gsap.timeline(); 
+      const content = document.querySelector('.content-wrap');
+      const relevantContent = content.querySelector('span.content-' + i);  
+      ScrollTrigger.create({    
+        trigger: ".wrapper",
+        start: "top -=" + ( singleDuration * i ),
+        end: "+=" + singleDuration,
+        //markers: true,
+        animation: smallTimeline,
+        toggleActions: relevantContent.classList.contains('remaining') ? "play none play reverse" : "play reverse play reverse",
+      });   
+      smallTimeline 
+        .to(elem,{ duration: 0.25, color: "orange", scale: 1.25, ease: 'none' }, 0) 
+        .set(relevantContent,{ autoAlpha: 1 }, 0.125)
+      ;
     });
 
-    images[0].onload = render;
 
-    function render() {
-      context.clearRect(0, 0, canvas.width, canvas.height);
-      context.drawImage(images[airpods.frame], 0, 0); 
-    }
+    // -------------------------------------------------------------------------------------------------------------
+
+    /* ====================== Yowza! section 3 모션 */
+    var showYowza = gsap.timeline()
+      showYowza.to('.below span', { autoAlpha: 1, y: 0 })
+    ScrollTrigger.create({    
+      trigger: ".below",
+      start: "top center",
+      //endTrigger: ".footer",
+      end: "bottom bottom",
+      //scrub: 1,
+      //markers: true,
+      animation: showYowza,
+      toggleActions: "none play none reverse"
+      //toggleActions: "play reverse play reverse"
+    });
 
   </script>
 </body>
