--- a/jqueryPlugin/demo/layout/scrollTrigger/default.html
+++ b/jqueryPlugin/demo/layout/scrollTrigger/default.html
@@ -92,7 +92,10 @@
 							<td>
 								- 움직일대상 선택자 : 움직임을 적용할 타겟 (".xxx", "#xxx") <br>
 								- {움직임 속성값} : 움직임 속성 적용 scale:(0 ~ 0.5 ~ 1) <br>
-								- 위상값 : `.1` 위상값이 커질수록 딜레이거리가 늘어남
+									<ul class="disc-list ml5">
+										<li>ease : easeIn, easeOut, easeInOut {none, power1~4, bounce, circ, elastic, back, expo, quad, quart, quint, sine} </li>
+									</ul>
+								- 위상값 : (기본값 : 0) `.1` 위상값이 커질수록 딜레이거리가 늘어남,  1끝나는 시점
 							</td>
 						</tr>
 					</tbody>
