--- a/jqueryPlugin/demo/layout/scrollTrigger/default.html
+++ b/jqueryPlugin/demo/layout/scrollTrigger/default.html
@@ -98,6 +98,152 @@
 								- 위상값 : (기본값 : 0) `.1` 위상값이 커질수록 딜레이거리가 늘어남,  1끝나는 시점
 							</td>
 						</tr>
+						<tr>
+							<td colspan="2">
+								<div class="row2">
+									<div class="item">
+										<strong>{움직임 속성값}</strong>
+										<table  class="table_row" summary="gsap 옵션 설명">
+											<thead>
+												<tr>
+													<th>GSAP</th>
+													<th>Description or equivalent CSS</th>
+												</tr>
+											</thead>
+											<tbody>
+												<tr>
+													<td>x: 100</td>
+													<td>transform: translateX(100px)</td>
+												</tr>
+												<tr>
+													<td>y: 100</td>
+													<td>transform: translateY(100px)</td>
+												</tr>
+												<tr>
+													<td>xPercent: 50</td>
+													<td>transform: translateX(50%)</td>
+												</tr>
+												<tr>
+													<td>yPercent: 50</td>
+													<td>transform: translateY(50%)</td>
+												</tr>
+												<tr>
+													<td>scale: 2</td>
+													<td>transform: scale(2)</td>
+												</tr>
+												<tr>
+													<td>scaleX: 2</td>
+													<td>transform: scaleX(2)</td>
+												</tr>
+												<tr>
+													<td>scaleY: 2</td>
+													<td>transform: scaleY(2)</td>
+												</tr>
+												<tr>
+													<td>rotation: 90</td>
+													<td>transform: rotate(90deg)</td>
+												</tr>
+												<tr>
+													<td>rotation: "1.25rad"</td>
+													<td>Using Radians - no CSS alternative</td>
+												</tr>
+												<tr>
+													<td>skew: 30</td>
+													<td>transform: skew(30deg)</td>
+												</tr>
+												<tr>
+													<td>skewX: 30</td>
+													<td>transform: skewX(30deg)</td>
+												</tr>
+												<tr>
+													<td>skewY: "1.23rad"</td>
+													<td>Using Radians - no CSS alternative</td>
+												</tr>
+												<tr>
+													<td>transformOrigin: "center 40%"</td>
+													<td>transform-origin: center 40%</td>
+												</tr>
+												<tr>
+													<td>opacity: 0</td>
+													<td>adjust the elements opacity</td>
+												</tr>
+												<tr>
+													<td>autoAlpha: 0</td>
+													<td>shorthand for opacity &amp; visibility</td>
+												</tr>
+												<tr>
+													<td>duration: 1</td>
+													<td>animation-duration: 1s</td>
+												</tr>
+												<tr>
+													<td>repeat: -1</td>
+													<td>animation-iteration-count: infinite</td>
+												</tr>
+												<tr>
+													<td>repeat: 2</td>
+													<td>animation-iteration-count: 2</td>
+												</tr>
+												<tr>
+													<td>delay: 2</td>
+													<td>animation-delay: 2</td>
+												</tr>
+												<tr>
+													<td>yoyo: true</td>
+													<td>animation-direction: alternate</td>
+												</tr>
+											</tbody>
+										</table>										
+									</div>
+									<div class="item">
+										<strong>{움직임 옵션}</strong>
+										<table class="table_row" summary="gsap 옵션 설명">
+											<thead>
+												<tr>
+													<th>Property</th>
+													<th>Description</th>
+												</tr>
+											</thead>
+											<tbody>
+												<tr>
+													<td>duration</td>
+													<td>애니메이션의 지속 시간 (seconds) Default: 0.5</td>
+												</tr>
+												<tr>
+													<td>delay</td>
+													<td>애니메이션이 시작되기 전 지연 시간 (seconds)</td>
+												</tr>
+												<tr>
+													<td>repeat</td>
+													<td>애니메이션을 몇 번 반복 카운드</td>
+												</tr>
+												<tr>
+													<td>yoyo</td>
+													<td>true면 애니메이션이 왕복됨
+														<br>
+														Default: false
+													</td> 
+												</tr>
+												<tr>
+													<td>stagger</td>
+													<td>각 타겟 애니메이션의 시작 사이의 시간(초)(여러 타겟이 제공된 경우)
+													</td>
+												</tr>
+												<tr>
+													<td>ease</td>
+													<td>애니메이션의 텐션 <br>
+														 Default: "power1.out"
+													</td>
+												</tr>
+												<tr>
+													<td>onComplete</td>
+													<td>애니메이션이 완료되면 실행되는 함수.</td>
+												</tr>
+											</tbody>
+										</table>
+									</div>
+								</div>
+							</td>
+						</tr>
 					</tbody>
 				</table>
 
