--- a/asset/css/common.css
+++ b/asset/css/common.css
@@ -16,7 +16,7 @@ table caption.tit { width:100%; height:auto; margin:20px 0; font-size:20px; font
 table { border-collapse:collapse; border-spacing:0; line-height:1.5}
 article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section { display:block; margin:0; padding:0;}  
 a:link, a:visited  { text-decoration:none; color:#333; }
-a:active, a:hover, a:focus { text-decoration:underline; }
+a:active, a:hover, a:focus, .link_line { text-decoration:underline; }
 pre { tab-size: 4; }
 
 /* 공통:gnb-style */
