--- a/asset/css/common.css
+++ b/asset/css/common.css
@@ -76,7 +76,8 @@ pre { tab-size: 4; }
 
 .row2 { display: flex; flex-wrap: wrap; justify-content: space-between; }
 
-
+article.typo-area {}
+article.typo-area h3 { font-size: 14px; }
 .contents {/* width:780px; margin:10px 0 50px 20px; line-height:18px; */}
 .contents .con_comm { margin-bottom:30px; }
 .contents h1 { /*width:100%; height:24px; margin:0px 0px 10px; line-height:24px; font-weight:bold; color:#6270a5; font-size:20px; background:#ffffff; border-top:0px solid #6270a5;  border-bottom:0px solid #6270a5; */}
